<resources>
    <string name="app_name">MyLeague</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create new one</string>
    <string name="hint_enter_title_here">Enter title here</string>
    <string name="hint_enter_description">Enter description</string>
    <string name="text_count">Todo count: %d</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="load">Load</string>
    <string name="league">League</string>
    <string name="cup">Cup</string>
    <string name="league_cup">League/Cup:</string>
    <string name="fixtures">Fixtures</string>
    <string name="bracket">Bracket</string>
    <string name="pos">#</string>
    <string name="team">Team</string>
    <string name="team_">Team :</string>
    <string name="logo">Logo</string>
    <string name="logo_">Logo :</string>
    <string name="rank_round">G</string>
    <string name="rank_w">W</string>
    <string name="rank_d">D</string>
    <string name="rank_l">L</string>
    <string name="rank_gf">+</string>
    <string name="rank_ga">-</string>
    <string name="rank_gd">GD</string>
    <string name="cancel">Cancel</string>
    <string name="rank_pts">P</string>
    <string name="add_team">Add Team</string>
    <string name="enter_team">Enter Team Name</string>
    <string name="create_league">Create League</string>
    <string name="edit_team">Edit Team</string>
    <string name="load_league">Choose League</string>
    <string name="update_result">Update Result</string>
    <string name="update">Update</string>
    <string name="week_data">Week %s</string>
    <string name="round_32">Round 32</string>
    <string name="round_16">Round 16</string>
    <string name="round_8">Quarters-finals</string>
    <string name="round_4">Semi-finals</string>
    <string name="final_">Final</string>
    <string name="double_round">Double Round-robin</string>
    <string name="single_round">Single Round-robin</string>
    <string name="format">Round-robin:</string>
    <string name="point_win_match">Point Win Per Match:</string>
    <string name="point_draw_match">Point Draw Per Match:</string>
    <string name="point_lose_match">Point Lose Per Match:</string>

    <string name="wins_">Wins: %s</string>
    <string name="loses_">Lose: %s</string>
    <string name="draw_">Draw: %s</string>
    <string name="goals_">Goals: %s</string>
    <string name="conceded_">Goals conceded: %s</string>
    <string name="last_five_">Last 5 matches:</string>
    <string name="schedule_">Schedule:</string>
    <string name="out_of_limit_team">The allowable limit on the number of teams has been reached</string>
    <string name="out_of_limit_league">The allowable limit on the number of leagues has been reached</string>
    <string name="please_add_team">Please add team</string>


</resources>
