<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_02">

            <com.jarvis.design_system.toolbar.JxToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:toolbarHideDivider="true"
                app:toolbarTitle="@string/league"
                app:toolbarViewStyle="backTitle" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icLogo"
                android:layout_width="@dimen/px100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px20"
                android:adjustViewBounds="true"
                android:src="@drawable/vn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvTitle"
                style="@style/T20H28B"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/px16"
                android:layout_marginTop="@dimen/px16"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icLogo"
                tools:text="Vietnam" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvWins"
                style="@style/T14H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px16"
                android:layout_marginEnd="@dimen/px8"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvLose"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="@string/wins_" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvLose"
                style="@style/T14H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px8"
                android:layout_marginEnd="@dimen/px16"
                android:textColor="@color/ink_5"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvWins"
                app:layout_constraintLeft_toRightOf="@+id/tvWins"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/loses_" />


            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvDraw"
                style="@style/T14H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:layout_marginEnd="@dimen/px16"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWins"
                tools:text="@string/draw_" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvGoals"
                style="@style/T14H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:layout_marginEnd="@dimen/px8"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvLose"
                app:layout_constraintTop_toBottomOf="@+id/tvDraw"
                tools:text="@string/goals_" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvConceded"
                style="@style/T14H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginEnd="@dimen/px8"
                android:textColor="@color/ink_5"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGoals"
                app:layout_constraintLeft_toRightOf="@+id/tvGoals"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/conceded_" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tv5Matches"
                style="@style/T14H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:layout_marginEnd="@dimen/px8"
                android:text="@string/last_five_"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGoals" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc5Matches"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@+id/tv5Matches"
                app:layout_constraintLeft_toRightOf="@+id/tv5Matches"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv5Matches"
                tools:itemCount="5"
                tools:listitem="@layout/item_matches" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvSchedule"
                style="@style/T14H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:layout_marginEnd="@dimen/px8"
                android:text="@string/schedule_"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv5Matches" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:orientation="vertical"
                android:paddingBottom="@dimen/px16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSchedule"
                tools:itemCount="200"
                tools:listitem="@layout/item_match_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
