<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_01"
            android:paddingHorizontal="@dimen/px16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvTitle"
                style="@style/T20H28B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px16"
                android:text="@string/edit_team"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icLogo"
                android:layout_width="@dimen/px60"
                android:layout_height="@dimen/px60"
                android:layout_marginTop="@dimen/px16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:srcCompat="@drawable/ic_security_black" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvName"
                style="@style/T16H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/etName"
                app:layout_constraintTop_toTopOf="@id/etName"
                app:layout_constraintBottom_toBottomOf="@+id/etName"/>

            <com.jarvis.design_system.textview.CustomEditText
                android:id="@+id/etName"
                style="@style/T14H20M"
                android:layout_width="0px"
                android:layout_marginStart="@dimen/px16"
                android:layout_height="wrap_content"
                android:textColor="@color/ink_5"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/px8"
                android:layout_marginTop="@dimen/px16"
                android:maxLength="40"
                android:background="@drawable/bg_edit_text"
                android:singleLine="true"
                android:textColorHint="@color/ink_3"
                android:paddingVertical="@dimen/px8"
                app:layout_constraintTop_toBottomOf="@+id/icLogo"
                app:layout_constraintLeft_toRightOf="@+id/tvName"
                app:layout_constraintRight_toRightOf="parent" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvLogo"
                style="@style/T16H20M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px8"
                android:text="@string/logo_"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvMyMedication"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px150"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/px8"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogo"
                app:spanCount="8"
                tools:itemCount="200"
                tools:listitem="@layout/item_logo" />

            <com.jarvis.design_system.button.JxButton
                android:id="@+id/btEdit"
                style="@style/ButtonPrimary.SizeS"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px20"
                android:layout_marginBottom="@dimen/px16"
                android:paddingHorizontal="@dimen/px16"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btCancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcvMyMedication" />

            <com.jarvis.design_system.button.JxButton
                android:id="@+id/btCancel"
                style="@style/ButtonPrimary.SizeS"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/px20"
                android:layout_marginBottom="@dimen/px16"
                android:paddingHorizontal="@dimen/px16"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btEdit"
                app:layout_constraintTop_toBottomOf="@+id/rcvMyMedication" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
